syntax = "proto3";

message UserNeed {
  int64 need_id = 1;
  int64 user_id = 2;
  string sender = 3;
}
